[FIX] 컨트롤러 4개 찬님 방식대로 바꿔봤슴다
꽤 유용함